--- a/.env
+++ b/.env
@@ -33,9 +33,10 @@ APP_SECRET=fd8f108fc3447bed6d587b6c1ef3020e
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
-MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
+ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+ MAILER_DSN="smtp://jlopgal0606@g.educaand.es:fqmg%20rydf%20ovpl%20nelm@smtp.gmail.com:587"
+
 ###< symfony/mailer ###
