--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -20,7 +20,7 @@ security:
                 login_path: app_login
                 check_path: app_login
                 enable_csrf: true
-                # default_target_path: /inicio/hola
+                default_target_path: /index
             logout:
                 path: app_logout
                 # where to redirect after logout
@@ -36,7 +36,7 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/inicio/ , roles: ROLE_ADMIN }
+         - { path: ^/index , roles: ROLE_ADMIN }
          - { path: /alumnos, roles: ROLE_USER }
 
 when@test:
